# watcher

./: .editorconfig  .gitignore  .hlint.yaml  README.md  stack.yaml
.github/workflows/: haskell.yml
watcher/: LICENSE  README.md  watcher.cabal
watcher/app/: Main.hs
watcher/src/: FileSystemTypes.hs  Main.hs
watcher/src/FileManager/: FileManagerHandlers.hs  FilePathUtils.hs  FileSystemTypes.hs  FileSystemUtils.hs  Handlers.hs  Loader.hs  Main.hs  VCSHandlers.hs
watcher/src/Handlers/: FileManagerHandlers.hs  VCSHandlers.hs
watcher/src/Loaders/: Downloader.hs  Loader.hs  Uploader.hs
watcher/src/Utils/: FilePathUtils.hs  FileSystemUtils.hs  LoaderUtils.hs  Parser.hs
watcher/test/: FileManagerSpec.hs  Spec.hs
