name:                watcher
version:             0.1.0.0
synopsis:            Synopsis for watcher
description:         Watcher

homepage:            https://github.com/fp-ctd-itmo/hw2-pavponn
license:             MIT
license-file:        LICENSE
author:              Pavel Ponomarev
maintainer:          pavponn@yandex.ru
copyright:           2020 Pavel Ponomarev

category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

executable watcher
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       FileManager.FileSystemTypes
                     , FileManager.FileManagerHandlers
                     , Utils.FilePathUtils
                     , Utils.FileSystemUtils
                     , Utils.LoaderUtils
                     , Utils.Parser
                     , FileManager.VCSHandlers
                     , Loaders.Downloader
                     , Loaders.Uploader
  -- other-extensions:
  ghc-options:         -Wall -Werror
  build-depends:       base >=4.9 && < 5
                     , directory
                     , time
                     , mtl
                     , bytestring
                     , utf8-string
                     , containers
                     , filepath
                     , transformers
                     , optparse-applicative
                     , mime-types
                     , text
  default-language:    Haskell2010
