name:                watcher
version:             0.1.0.0
synopsis:            Synopsis for watcher
description:         Watcher

homepage:            https://github.com/fp-ctd-itmo/hw2-pavponn
license:             MIT
license-file:        LICENSE
author:              Pavel Ponomarev
maintainer:          pavponn@yandex.ru
copyright:           2020 Pavel Ponomarev

category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.3

executable watcher
  hs-source-dirs:      app
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall -Werror
  build-depends:       base >=4.9 && < 5
                     , directory
                     , time
                     , mtl
                     , bytestring
                     , utf8-string
                     , containers
                     , transformers
                     , optparse-applicative
                     , watcher
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     FileSystemTypes
                     , Handlers.VCSHandlers
                     , Handlers.FileManagerHandlers
                     , Utils.FilePathUtils
                     , Utils.FileSystemUtils
                     , Utils.LoaderUtils
                     , Utils.Parser
                     , Loaders.Downloader
                     , Loaders.Uploader
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , directory
                     , time
                     , mtl
                     , bytestring
                     , utf8-string
                     , containers
                     , filepath
                     , transformers
                     , mime-types
                     , text
  default-language:    Haskell2010

test-suite watcher-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base
                   , directory
                   , time
                   , containers
                   , transformers
                   , bytestring
                   , utf8-string
                   , mtl
                   , filepath
                   , hspec
                   , QuickCheck >= 2.13
                   , watcher
  other-modules:     FileManagerSpec
  ghc-options:       -Wall -threaded

  default-language:  Haskell2010
